--- a/css/main.css
+++ b/css/main.css
@@ -84,9 +84,192 @@ textarea {
 }
 
 /* ==========================================================================
-   Author's custom styles
+   Author's custom styles *MOBILE*
    ========================================================================== */
 
+       /* ~~~~~~~~~~ Fonts ~~~~~~~~~~
+        Open Sans: Default Text
+        font-family: 'Open Sans', sans-serif;
+
+        Romanesco: 'E. White The Brand' header wordmark
+        font-family: 'Romanesco', cursive;
+
+   /* ~~~~~~ Color Guide ~~~~~
+   #000000 - background color
+   #ffffff - text color
+   /*
+
+
+
+/* Global Styles */
+
+    html, body {
+        background: #000000;
+        color: #ffffff;
+        font-size: 16px;
+        height: 100%;
+        width: 100%;
+    }
+
+    body {
+        display: flex;
+            flex-flow: row wrap;
+    }
+
+    header,
+    footer {
+        display: flex;
+            align-items: center;
+            justify-content: center;
+        background-color: #000000;
+        height: 7.5%;
+        width: 100%;
+    }
+
+    main {
+        display: flex;
+            flex-flow: row wrap;
+        height: 85%;
+        width: 100%;
+    }
+
+    section {
+        display: flex;
+        width: 100%;
+    }
+
+    header .content-wrapper,
+    footer .content-wrapper{
+        width: 90%;
+    }
+
+    /* Global Typography */
+
+    p {
+        font-size: 1em;
+        margin: 0;
+    }
+
+
+/* The following line of code controls the color of links during clicks, mouseovers, etc. */
+
+    /* unvisited link */
+    a:link {
+      color: #FAFAFA;
+    }
+    /* visited link */
+    a:visited {
+      color: #FAFAFA;
+    }
+    /* mouse over link */
+    a:hover {
+      color: #948500;
+    }
+    /* selected link */
+    a:active {
+      color: #948500;
+    }
+/* ------------------------------- */
+
+    /* ----------------------------------------------*/
+    /* Header */
+    header .content-wrapper{
+        display: flex;
+            flex-flow: row nowrap;
+    }
+    header div {
+        width: 50%;
+    }
+
+    .ewhite-wordmark {
+        font-family: 'Romanesco', cursive;
+        font-size: 1.7em;
+    }
+
+    .topnav {
+        display: flex;
+            align-items: center;
+            justify-content: flex-end;
+        width: 50%;
+        overflow: hidden;
+        position: relative;
+      }
+
+    /* Hide the links inside the navigation menu (except for logo/home) */
+    .topnav #menuitems {
+      display: none;
+    }
+
+/* CSS styles to create 3-line menu bar in the nav area */
+    .menu-bars {
+      display: inline-block;
+      cursor: pointer;
+      width: 35px;
+    }
+
+    .bar1, .bar2, .bar3 {
+      width: 35px;
+      height: 5px;
+      background-color: #ffffff;
+      margin: 6px 0;
+      transition: 0.4s;
+    }
+
+    /* Rotate first bar */
+    .change .bar1 {
+      -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
+      transform: rotate(-45deg) translate(-9px, 6px) ;
+    }
+
+    /* Fade out the second bar */
+    .change .bar2 {
+      opacity: 0;
+    }
+
+    /* Rotate last bar */
+    .change .bar3 {
+      -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+      transform: rotate(45deg) translate(-8px, -8px) ;
+    }
+        /* Nav menu bar ends */
+
+
+
+    nav i {
+        font-size: 1.3em;
+    }
+
+    /* Main Section */
+    section .content-wrapper{
+        height: 100%;
+        width: 100%;
+        background-color: #000000;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    }
+
+    .top-third .content-wrapper {
+        background-image: url('../img/ewhite1.png');
+    }
+
+    .middle-third .content-wrapper {
+        background-image: url('../img/ewhite2.png');
+    }
+
+    .bottom-third .content-wrapper {
+        background-image: url('../img/ewhite3.png');
+    }
+
+    /* Footer */
+    footer i {
+        font-size: 2em;
+    }
+
+    .footer-content {
+        display: flex;
+            justify-content: space-around;
+    }
 /* ==========================================================================
    Helper classes
    ========================================================================== */
@@ -260,4 +443,3 @@ textarea {
     page-break-after: avoid;
   }
 }
-
